# auto-generated-tech-term-database

./: .gitignore  LICENSE  README.md  fetch_tech_stack_data.ipynb  pyproject.toml  search_tags.py
data/: stack_exchange_tags_with_stackshare.csv
